[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvlab"                # pip install cvlab
version = "0.1.0"
description = "Control library for CVLab system"
authors = [
    { name="Francisco Munguia", email="fmg220691@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU GENERAL PUBLIC LICENSE"}

dependencies = [
    "requests"
]

[tool.setuptools.packages.find]
include = ["cvlab"]
